Fixed WhiteSpace Issue with TextArea in Website-Edit, added Placeholder and increased rows

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -15,6 +15,9 @@ body {
     padding-bottom: 60px;
 }
 
+textarea {
+    word-wrap: break-word;
+}
 .navbar-text.pull-right {
     margin-right: 15px;
 }
